Add Localization to modules dropdown

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
 						<button class="dropdown-menu"><img src="{{ site.baseurl }}/images/dropdown.png" />MODULES</button>
 						<div class="dropdown-content">
 							<a href="https://discord-sambo.github.io/command">Command</a>
+							<a class="current" href="https://discord-sambo.github.io/localization">Localization</a>
 							<a href="https://discord-sambo.github.io/logger">Logger</a>
 						</div>
 					</div>
