--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 						</div>
 					</div>
 				</li>
-				<li><a href="{{ site.baseurl }}/guides/writing_localization_files">Guides</a></li>
+				<li><a href="{{ site.baseurl }}/guides/default">Guides</a></li>
 			   	<li><a href="{{ site.baseurl }}/docs/">Docs</a></li>
 			</ul>
 		</nav>
