Add fix for redirect_from
Hopefully. I read up on the plugin and it looks like it uses site.url + site.baseurl when handling the redirects so this should fix it. It's working locally at least.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="container">
-		<a href="{{ site.url }}" class="logo">@discord-Sambo/localization</a>
+		<a href="{{ site.url }}{{ site.baseurl }}" class="logo">@discord-Sambo/localization</a>
 		<nav>
 			<ul>
 				<li>
