--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="container">
-		<a href="{{ site.url }}{{ site.baseurl }}" class="logo">@discord-Sambo/localization</a>
+		<a href="{{ site.url }}{{ site.baseurl }}/" class="logo">@discord-sambo/localization</a>
 		<nav>
 			<ul>
 				<li>
