--- a/_sass/includes/_grid.sass
+++ b/_sass/includes/_grid.sass
@@ -13,6 +13,15 @@
 	list-style: none
 	font-size: 0
 
+	table
+		border-collapse: collapse
+
+	table, thead, th, tr, td
+		border: 1px solid black
+		padding: 5px
+	
+	// th, tr, td
+
 @mixin col
 	display: inline-block
 	box-sizing: border-box
@@ -43,4 +52,3 @@
 		.col-sm-#{$INDEX}
 			@include col
 			width: 100%
-
