--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
 <header>
 	<div class="container">
-		<a href="{{ site.url }}{{ site.baseurl }}/" class="logo">@discord-sambo/localization</a>
+		<a href="{{ site.url }}{{ site.baseurl }}/" class="logo">@discord-samba/localization</a>
 		<nav>
 			<ul>
 				<li>
 					<div class="dropdown">
 						<button class="dropdown-menu"><img src="{{ site.baseurl }}/images/dropdown.png" />MODULES</button>
 						<div class="dropdown-content">
-							<a href="https://discord-sambo.github.io/command">Command</a>
-							<a class="current" href="https://discord-sambo.github.io/localization">Localization</a>
-							<a href="https://discord-sambo.github.io/logger">Logger</a>
+							<a href="https://discord-samba.github.io/command">Command</a>
+							<a class="current" href="https://discord-samba.github.io/localization">Localization</a>
+							<a href="https://discord-samba.github.io/logger">Logger</a>
 						</div>
 					</div>
 				</li>
