Add typography quoteblock styling

--- a/_sass/includes/_typography.sass
+++ b/_sass/includes/_typography.sass
@@ -46,6 +46,16 @@ body
 		&:hover
 			text-decoration: underline
 
+	blockquote
+		border-radius: 3px
+		border-left: 3px solid #95bdca
+		padding-left: 10px
+		margin: 0 13px 0 0
+		font-style: italic
+
+		code
+			font-style: normal
+
 	dl.specs
 		line-height: 1.5em
 		margin: 1em 0
