--- a/_sass/includes/_typography.sass
+++ b/_sass/includes/_typography.sass
@@ -35,6 +35,14 @@ body
 		color: #285786
 		margin: 1.5em 0 0.5em 0
 
+	h4
+		position: relative
+		left: -2px
+		font-weight: 300
+		font-size: 24px
+		color: #285786
+		margin: 1.5em 0 0.5em 0
+
 	p
 		line-height: 1.5em
 		margin: 1em 0
