Remove wrapping in inline code blocks on typography pages

--- a/_sass/includes/_typography.sass
+++ b/_sass/includes/_typography.sass
@@ -87,6 +87,9 @@ body
 		font-size: 85%
 		background-color: rgba(#000, 0.04)
 
+	code
+		white-space: nowrap
+
 	pre
 		padding: 10px
 
@@ -94,3 +97,4 @@ body
 			padding: 0
 			font-size: 100%
 			background-color: transparent
+			white-space: unset
