--- a/css/main.scss
+++ b/css/main.scss
@@ -14,3 +14,4 @@
 @import "components/navigation";
 @import "components/toc";
 @import "components/codeblock";
+@import "components/pipe_signature";
