Add border radius to transformer cards

--- a/_sass/components/_pipe_signature.sass
+++ b/_sass/components/_pipe_signature.sass
@@ -69,6 +69,7 @@
       background-position: -221px -68px
 
 .tsd-panel
+  border-radius: 3px
   margin: 20px 0
   padding: 20px
   background-color: #fff
