Add ToC support for pipe functions

--- a/_includes/pipe_signature.html
+++ b/_includes/pipe_signature.html
@@ -1,5 +1,6 @@
+<div class="tsd-anchor"><a id="pipe-{{include.name}}"></a></div>
 <div class="tsd-panel">
-	<div class="tsd-name"><b>{{ include.name }}</b></div>
+	<h5 class="tsd-name" id="pipe-{{include.name}}">{{ include.name }}</h5>
 	<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
 		<li class="tsd-signature tsd-kind-icon"><b>{{ include.signature }}</b></li>
 	</ul>
