--- a/_sass/components/_pipe_signature.sass
+++ b/_sass/components/_pipe_signature.sass
@@ -111,6 +111,8 @@
 
       &:nth-child(2n)
         background-color: #f8f8f8
+  h5
+    margin: 0
 
 .tsd-panel-group
   margin: 60px 0
@@ -221,3 +223,9 @@ ul.tsd-descriptions
 .tsd-name
   font-size: 1em
   padding-bottom: 10px
+
+.tsd-anchor
+  position: relative
+  float: inline-start
+  top: -15px
+  
