Update guide ToC scrollbar css
Gotta have that thin scrollbar

--- a/_sass/components/_toc.sass
+++ b/_sass/components/_toc.sass
@@ -4,6 +4,20 @@
 	position: -webkit-sticky
 	position: sticky
 	top: 1rem
+	scrollbar-width: thin
+
+.toc-container::-webkit-scrollbar
+	width: 5px
+
+.toc-container::-webkit-scrollbar-track
+	background: #f1f1f180
+
+.toc-container::-webkit-scrollbar-thumb
+	background: #88888840
+
+.toc-container::-webkit-scrollbar-thumb:hover
+	background: #55555540
+
 
 .toc, .toc ul
 	list-style-type: none
